2022-03-10  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/libpoke.c (my_decl_map_fn): Always return PK_NULL as
	`value' for type declarations.
	* libpoke/libpoke.h: Add decription of the arguments got by the
	pk_map_decl_fn callback.
	* testsuite/poke.libpoke/decls.c: New file.
	* testsuite/poke.libpoke/Makefile.am (decls_SOURCES): Define.
	(decls_CPPFLAGS): Likewise.
	(decls_CFLAGS): Likewise.
	(decls_LDADD): Likewise.
	(check_PROGRAMS): Add decls.
	* testsuite/poke.libpoke/libpoke.exp: Run the decls tests.

2022-03-10  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/elf-64.pk (Elf64_Shdr): sh_entsize is an offset in
	bytes, not bits.
	* pickles/elf-32.pk (Elf32_Shdr): Likewise.

2022-03-10  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/libpoke.h: Clarify that pk_array_type_bound always
	returns PK_NULL at the time being.

2022-03-09  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/std.pk (eoffset): New function.
	* doc/poke.texi (eoffset): New section.
	(Values Functions): Likewise.

2022-03-09  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-tab.y: Define tokens APUSH and APOP, and add rules
	for the operators.
	* libpoke/pkl-lex.l: Rules for APUSH and APOP tokens.
	* libpoke/pkl-ops.def: Define operators PKL_AST_OP_APUSH and
	PKL_AST_OP_APOP.
	* libpoke/pkl-typify.c (pkl_typify1_ps_op_apush): New handler.
	(pkl_typify1_ps_op_apop): Likewise.
	(pkl_phase_typify1): Register new handlers.
	* libpoke/pkl-promo.c (pkl_promo_ps_op_apush): New handler.
	(pkl_phase_promo): Register new handler.
	* libpoke/pkl-gen.c (pkl_gen_ps_op_apush): New handler.
	(pkl_gen_ps_op_apop): Likewise.
	(pkl_phase_gen): Register new handlers.
	* testsuite/poke.pkl/apush-diag-1.pk: New test.
	* testsuite/poke.pkl/apop-diag-1.pk: Likewise.
	* testsuite/poke.pkl/apush-diag-2.pk: Likewise.
	* testsuite/poke.pkl/apush-diag-3.pk: Likewise.
	* testsuite/poke.pkl/apush-1.pk: Likewise.
	* testsuite/poke.pkl/apush-2.pk: Likewise.
	* testsuite/poke.pkl/apop-1.pk: Likewise.