@@ -548,7 +548,8 @@ int pk_defvar (pk_compiler pkc, const char *varname, pk_val val) LIBPOKE_API;
    holding the method to be passed as the _last_ argument in the
    pk_call.  */
 
-int pk_call (pk_compiler pkc, pk_val cls, pk_val *ret, pk_val *exit_exception,
+int pk_call (pk_compiler pkc, pk_val cls,
+             pk_val *ret, pk_val *exit_exception,
              int narg, ...) LIBPOKE_API;
 
 /* Get and set properties of the incremental compiler.  */
@@ -1197,7 +1198,6 @@ struct pk_iod_if
      device spec by this backend, and if so, return its normalized
      form (caller will free).  In case of error, return NULL.  This function
      sets the ERROR to error code or to IOD_OK.  */
-
   char * (*handler_normalize) (const char *handler, uint64_t flags, int* error);
 
   /* Open a device using the provided HANDLER.  Return the opened
@@ -1205,42 +1205,34 @@ struct pk_iod_if
      IOD_OK.  Note that this function assumes that HANDLER is recognized as a
      handler by the backend.  DATA is the `data' pointer below, intended to be
      used as an IOD-specific payload specified by the author of IOD.  */
-
   void * (*open) (const char *handler, uint64_t flags, int *error, void *data);
 
   /* Close the given device.  Return the error code if there was an error
      during the operation, IOD_OK otherwise.  */
-
   int (*close) (void *dev);
 
   /* Read a small byte buffer from the given device at the given byte offset.
      Return 0 on success, or IOD_EOF on error, including on short reads.  */
-
   int (*pread) (void *dev, void *buf, size_t count, pk_iod_off offset);
 
   /* Write a small byte buffer to the given device at the given byte offset.
      Return 0 on success, or IOD_EOF on error, including short writes.  */
-
   int (*pwrite) (void *dev, const void *buf, size_t count, pk_iod_off offset);
 
   /* Return the flags of the device, as it was opened.  */
-
   uint64_t (*get_flags) (void *dev);
 
   /* Return the size of the device, in bytes.  */
-
   pk_iod_off (*size) (void *dev);
 
   /* If called on a in-stream, free the buffer before OFFSET.  If called on
      an out-stream, flush the data till OFFSET and free the buffer before
      OFFSET.  Otherwise, do not do anything.  Return IOS_OK in success and
      an error code on failure.  */
-
   int (*flush) (void *dev, pk_iod_off offset);
 
   /* IOD-specific data payload that will be passed to OPEN function.  If not
      used, it should be NULL.  */
-
   void *data;
 };
 
